--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,86 +1,91 @@
 ﻿@using FactuSystem.Authentication;
 @inject AuthenticationStateProvider authStateProvider
 
-<div class="top-row ps-3 navbar navbar-dark" style="background-color: rgb(0, 0, 53);">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">FactuSystem</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<div class=" d-flex flex-column" style="min-height: 100vh;">
+    <div class="top-row ps-3 navbar navbar-dark" style="background-color: rgb(0, 0, 53);">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">FactuSystem</a>
+            <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
     </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column" >
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="inicio" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        @*<div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>*@
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cliente">
-                <span class="oi oi-people" aria-hidden="true"></span> Clientes
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="producto">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Productos
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="proveedor">
-                <span class="oi oi-people" aria-hidden="true"></span> Proveedores
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <div class="dropdown">
-                <NavLink class="nav-link" @onclick="ToggleDropdown">
-                    <span class="oi oi-document " aria-hidden="true"></span> <strong>Factura</strong>
-                </NavLink>
-                @if (showDropdown)
-                {
-                    <div class="dropdown-content">
-                        <div class="nav-item px-3">
-                            <NavLink class="nav-link" @onclick="Vender">
-                                <span class="oi oi " aria-hidden="true">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-receipt" viewBox="0 0 16 16">
-                                        <path d="M1.92.506a.5.5 0 0 1 .434.14L3 1.293l.646-.647a.5.5 0 0 1 .708 0L5 1.293l.646-.647a.5.5 0 0 1 .708 0L7 1.293l.646-.647a.5.5 0 0 1 .708 0L9 1.293l.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .801.13l.5 1A.5.5 0 0 1 15 2v12a.5.5 0 0 1-.053.224l-.5 1a.5.5 0 0 1-.8.13L13 14.707l-.646.647a.5.5 0 0 1-.708 0L11 14.707l-.646.647a.5.5 0 0 1-.708 0L9 14.707l-.646.647a.5.5 0 0 1-.708 0L7 14.707l-.646.647a.5.5 0 0 1-.708 0L5 14.707l-.646.647a.5.5 0 0 1-.708 0L3 14.707l-.646.647a.5.5 0 0 1-.801-.13l-.5-1A.5.5 0 0 1 1 14V2a.5.5 0 0 1 .053-.224l.5-1a.5.5 0 0 1 .367-.27zm.217 1.338L2 2.118v11.764l.137.274.51-.51a.5.5 0 0 1 .707 0l.646.647.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.509.509.137-.274V2.118l-.137-.274-.51.51a.5.5 0 0 1-.707 0L12 1.707l-.646.647a.5.5 0 0 1-.708 0L10 1.707l-.646.647a.5.5 0 0 1-.708 0L8 1.707l-.646.647a.5.5 0 0 1-.708 0L6 1.707l-.646.647a.5.5 0 0 1-.708 0L4 1.707l-.646.647a.5.5 0 0 1-.708 0l-.509-.51z" />
-                                        <path d="M3 4.5a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5zm8-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z" />
-                                    </svg>
-                                </span> Vender
-                            </NavLink>
-                        </div>
-                        <div class="nav-item px-3">
-                            <NavLink class="nav-link" @onclick="Pagas">
-                                <span class="oi oi-dollar" aria-hidden="true"></span> Facturas/Contado
-                            </NavLink>
-                        </div>
-                        <div class="nav-item px-3">
-                            <NavLink class="nav-link" @onclick="Cobrar">
-                                <span class="oi oi-credit-card " aria-hidden="true"></span> Facturas/Crédito
-                            </NavLink>
-                        </div>
+    <div class="flex-grow-1">
+        <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+            <nav class="flex-column" >
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="inicio" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </div>
+                @*<div class="nav-item px-3">
+                    <NavLink class="nav-link" href="counter">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="fetchdata">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    </NavLink>
+                </div>*@
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="cliente">
+                        <span class="oi oi-people" aria-hidden="true"></span> Clientes
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="producto">
+                        <span class="oi oi-basket" aria-hidden="true"></span> Productos
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="proveedor">
+                        <span class="oi oi-people" aria-hidden="true"></span> Proveedores
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <div class="dropdown">
+                        <NavLink class="nav-link" @onclick="ToggleDropdown">
+                            <span class="oi oi-spreadsheet " aria-hidden="true"></span> <strong>Factura</strong>
+                        </NavLink>
+                        @if (showDropdown)
+                        {
+                            <div class="dropdown-content">
+                                <div class="nav-item px-3">
+                                    <NavLink class="nav-link" @onclick="Vender">
+                                        <span class="oi oi-document " aria-hidden="true">
+                                        </span> Vender
+                                    </NavLink>
+                                </div>
+                                <div class="nav-item px-3">
+                                    <NavLink class="nav-link" @onclick="Pagas">
+                                        <span class="oi oi-dollar" aria-hidden="true"></span> Facturas/Contado
+                                    </NavLink>
+                                </div>
+                                <div class="nav-item px-3">
+                                    <NavLink class="nav-link" @onclick="Cobrar">
+                                        <span class="oi oi-credit-card " aria-hidden="true"></span> Facturas/Crédito
+                                    </NavLink>
+                                </div>
+                            </div>
+                        }
                     </div>
-                }
-            </div>
+                </div>
+                
+            </nav>
         </div>
+    </div>
+
+    <div class="mt-auto">
+        <!-- Opción Log Out aquí -->
         <div class="nav-item px-3">
             <NavLink class="nav-link" @onclick="Logout">
                 <span class="oi oi-account-logout" aria-hidden="true"></span> Log Out
             </NavLink>
         </div>
-    </nav>
+    </div>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
