--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -161,7 +161,7 @@
             </div>
 
             <div class="row-12 mt-2">
-                <table class="table table-hover">
+                <table class="table table-hover table-striped">
                     <thead style="background-color: rgb(0, 0, 53); color: #ffffff;">
                         <tr>
                             <th>#</th>
